# serializer version: 1
# name: test_operational_alert_matches_snapshot[buy_orchestrator_error]
  '''
  ⚠️ *Error en el orquestador de compra*
  
  Causa: TinyFishSessionLost
  Alert: 12345678\-1234\-1234\-1234\-123456789abc
  Estado actual: Fase 2 desactivada por seguridad
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. `salvager logs --last 100`
  3\. `salvager phase2 enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[circuit_open]
  '''
  ⚠️ *Fase 2 desactivada globalmente*
  
  Causa: 3 fallos consecutivos \(umbral: 3\)
  Última entrada afectada: WD Red Plus 4TB / WD40EFPX
  Estado actual: Fase 2 desactivada globalmente
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. revisa la causa y parchea si es un bug
  3\. `salvager phase2 enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[daemon_started]
  '''
  ℹ️ Daemon iniciado
  
  Versión: 0\.1\.0 · jobs: wallapop\_poll, ebay\_poll
  '''
# ---
# name: test_operational_alert_matches_snapshot[daemon_stopped]
  '''
  ℹ️ Daemon detenido
  
  Motivo: SIGTERM
  '''
# ---
# name: test_operational_alert_matches_snapshot[ebay_quota_breach]
  '''
  ℹ️ Cuota diaria de eBay alcanzada
  
  Cuota: 5000/5000 peticiones usadas hoy
  Estado: cadencia de eBay reducida hasta el reset de medianoche UTC
  '''
# ---
# name: test_operational_alert_matches_snapshot[ebay_token_refresh_failed]
  '''
  ⚠️ *eBay: token de refresco rechazado*
  
  Causa: el endpoint de refresco rechazó el refresh token \(HTTP 401\)
  Estado actual: alertas de eBay en pausa \(Wallapop no afectado\)
  
  Próximo paso:
  1\. `salvager login ebay --ru-name <tu-runame>`
  2\. `docker-compose restart salvager`
  '''
# ---
# name: test_operational_alert_matches_snapshot[entry_snoozed]
  '''
  ℹ️ Entrada pospuesta
  
  Entrada: WD Red Plus 4TB
  Pospuesta hasta: 2026\-05\-15T12:00:00Z
  '''
# ---
# name: test_operational_alert_matches_snapshot[llm_provider_rate_limited]
  '''
  ℹ️ Proveedor LLM con rate\-limit
  
  Proveedor: gemini\-flash \(rate\-limited\)
  Estado: la caché y el reintento absorben el límite
  '''
# ---
# name: test_operational_alert_matches_snapshot[offer_disabled]
  '''
  ⚠️ *Envío de ofertas desactivado*
  
  Causa: kill\_switch\_global
  Estado actual: envío de ofertas desactivado globalmente
  
  Próximo paso:
  1\. `salvager offer enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[offer_lockout_engaged]
  '''
  ⚠️ *Envío de ofertas desactivado*
  
  Causa: 3 fallos consecutivos \(umbral: 3\)
  Última entrada afectada: Corsair Vengeance LPX 16GB / CMK16GX4M2D3000C16
  Estado actual: envío de ofertas desactivado globalmente
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. revisa la causa y parchea si es un bug
  3\. `salvager offer enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[offer_orchestrator_error]
  '''
  ⚠️ *Error en el orquestador de ofertas*
  
  Causa: TinyFishSessionLost
  Alert: 12345678\-1234\-1234\-1234\-123456789abc
  Estado: ninguna oferta enviada; el teclado se ha restaurado
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  '''
# ---
# name: test_operational_alert_matches_snapshot[offer_re_enabled]
  '''
  ℹ️ Envío de ofertas reactivado
  
  Entrada: Corsair Vengeance LPX 16GB / CMK16GX4M2D3000C16
  '''
# ---
# name: test_operational_alert_matches_snapshot[phase2_buy_callback_received]
  '''
  ℹ️ Buy callback recibido
  
  Entrada: WD Red Plus 4TB / WD40EFPX
  Alert: 12345678\-1234\-1234\-1234\-123456789abc
  Estado: compra en curso
  '''
# ---
# name: test_operational_alert_matches_snapshot[phase2_buy_completion_slow]
  '''
  ℹ️ Compra completada con retraso
  
  Entrada: WD Red Plus 4TB / WD40EFPX
  Duración: 87s \(presupuesto: 60s\)
  Estado: la compra terminó pero excedió el presupuesto
  '''
# ---
# name: test_operational_alert_matches_snapshot[phase2_disabled]
  '''
  ⚠️ *Fase 2 desactivada globalmente*
  
  Causa: receipt\_mismatch
  Última entrada afectada: WD Red Plus 4TB / WD40EFPX
  Estado actual: Fase 2 desactivada globalmente
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. revisa el motivo y parchea si es un bug
  3\. `salvager phase2 enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[phase2_re_enabled]
  '''
  ℹ️ Fase 2 reactivada
  
  Entrada: WD Red Plus 4TB / WD40EFPX
  '''
# ---
# name: test_operational_alert_matches_snapshot[phase2_screenshot_missing]
  '''
  ⚠️ *Captura del recibo no disponible*
  
  Recibo: WP\-2026\-0001 · listing: abc123
  Estado: la compra puede haberse completado, pero no se capturó el recibo
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. revisa el marketplace manualmente para confirmar la transacción
  '''
# ---
# name: test_operational_alert_matches_snapshot[poll_cycle_error]
  '''
  ⚠️ *Error en el ciclo de sondeo*
  
  Causa: RuntimeError en el ciclo de wallapop
  Estado actual: el ciclo continuará en el siguiente tick
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. `salvager logs --last 50`
  '''
# ---
# name: test_operational_alert_matches_snapshot[smoke_test_failed]
  '''
  ⚠️ *Smoke test fallido*
  
  Fixture: wallapop\_html\_comma\_vs\_dot
  Parser: 0\.53 € · esperado: 53\.00 € · delta: 52\.47 €
  Estado actual: Fase 2 desactivada globalmente
  
  Próximo paso:
  1\. `salvager phase2 smoke-test`
  2\. `salvager audit show --type phase2_smoke_test --last 3`
  3\. parchea el parser y reactiva con `salvager phase2 enable <entry>`
  '''
# ---
# name: test_operational_alert_matches_snapshot[smoke_test_recovered]
  '''
  ℹ️ Smoke test recuperado
  
  Estado: parser de precios recuperado; Fase 2 puede reactivarse
  '''
# ---
# name: test_operational_alert_matches_snapshot[tinyfish_fallback_active]
  '''
  ℹ️ Fallback TinyFish activo
  
  Adapter: wallapop\_tinyfish en uso como camino de respaldo
  Estado: sin alertas perdidas
  '''
# ---
# name: test_operational_alert_matches_snapshot[tinyfish_fallback_recovered]
  '''
  ℹ️ Camino principal de Wallapop recuperado
  
  Adapter: wallapop\_api recuperado como camino principal
  '''
# ---
# name: test_operational_alert_matches_snapshot[wallapop_api_degraded]
  '''
  ℹ️ Wallapop API degradada
  
  Adapter: wallapop\_api \(WallapopApiError\)
  Fallback: wallapop\_tinyfish activo este ciclo
  '''
# ---
# name: test_operational_alert_matches_snapshot[wallapop_both_paths_down]
  '''
  ⚠️ *Wallapop sin servicio*
  
  Causa: 3 fallos consecutivos · último error: TinyFishUnavailable
  Estado actual: alertas de Wallapop en pausa \(eBay no afectado\)
  
  Próximo paso:
  1\. `salvager audit show --last 5`
  2\. revisa la conexión o parchea el adaptador si persiste
  3\. `docker-compose restart salvager`
  '''
# ---
# name: test_operational_alert_matches_snapshot[wallapop_session_expired]
  '''
  ℹ️ Sesión Wallapop expirada
  
  Adapter: wallapop\_api \(devuelve 401\)
  Fallback: wallapop\_tinyfish activo \(sin alertas perdidas\)
  
  Próximo paso: `salvager login wallapop` cuando puedas
  '''
# ---
# name: test_operational_alert_matches_snapshot[wallapop_session_renewed]
  '''
  ℹ️ Sesión Wallapop renovada
  
  Adapter: wallapop\_api \(camino principal reactivado\)
  '''
# ---
